--- a/layouts/404.html
+++ b/layouts/404.html
@@ -9,7 +9,7 @@
         </header>
         <section>
             <div class="title404">
-                <p>每一个平凡的日常<br/>都是连续发生中的奇迹</p>
+                <p>本页面被我吃了哟</p>
             </div>
             <a rel="nofollow" href="{{ .Site.BaseURL }}" class="index404">回首页看看</a>
         </section>
