--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,30 +1,30 @@
-<footer id="footer">
+<footer id="footer" class="post-footer">
     <div class="container">
         &copy; 2018 <a href="{{ .Site.BaseURL | absURL }}">{{ .Site.Title }}</a>.
         Powered by <a rel="nofollow noreferer noopener" href="https://gohugo.io">Hugo</a>.
-        <a href="http://www.flysnow.org/">Theme</a> based on <a href="https://github.com/rujews/maupassant-hugo">maupassant</a>.
-        {{ if .Site.Params.showHostPage }}
-        Hosted by <a rel="nofollow noreferer noopener" href="https://pages.coding.me">Coding Pages</a>.
-        {{ end }}
+        Theme <a href="http://www.github.com/wlh320/simpale">simpale</a> based on <a href="https://github.com/rujews/maupassant-hugo">maupassant</a>.
     </div>
 </footer>
+<a id="rocket" class="lb-doubleup" href="#top"></a>
+{{ template "_internal/google_analytics_async.html" . }}
+
+<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/zepto/1.2.0/zepto.min.js"></script>
+{{ $app := resources.Get "js/app.js" | minify }}
+<script type="text/javascript" src="{{ $app.Permalink | relURL}}" defer></script>
 
 {{ if .IsPage }}
 <script type="text/javascript" src="{{ "js/prism.js" | relURL}}" async="true"></script>
-<script type="text/javascript">
-window.MathJax = {
-    tex2jax: {
-        inlineMath: [ ['$','$'] ],
-        processEscapes: true
-    }
-};
-</script>
-<script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=TeX-MML-AM_CHTML' async></script>
-{{ end }}
-<a id="rocket" href="#top" class="show"></a>
-<script type="text/javascript" src="{{ "js/totop.js?v=0.0.0" | relURL }}" async=""></script>
-{{ template "_internal/google_analytics_async.html" . }}
-
-{{ if .Site.Params.busuanzi }}
-<script type="text/javascript" src="//dn-lbstatics.qbox.me/busuanzi/2.3/busuanzi.pure.mini.js" async></script>
+    {{ if .Params.mathjax }}
+    <script type="text/javascript">
+        window.MathJax = {
+            tex2jax: {
+                inlineMath: [
+                    ['$', '$']
+                ],
+                processEscapes: true
+            }
+        };
+    </script>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=TeX-MML-AM_CHTML' async></script>
+    {{ end }}
 {{ end }}
