--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -1,12 +1,12 @@
 <div id="secondary">
-    <section class="widget">
+    <!-- <section class="widget">
         {{ partial "search_form" . }}
-    </section>
-    
+    </section> -->
+
     <section class="widget">
         <h3 class="widget-title">最近文章</h3>
         <ul class="widget-list">
-            {{ range first 10 (where (where .Site.Pages "Type" "post") "Kind" "page") }}
+            {{ range first 10 (where (where .Site.Pages "Type" "posts") "Kind" "page") }}
             <li>
                 <a href="{{ .Permalink }}" title="{{ .Title }}">{{ .Title }}</a>
             </li>
@@ -14,7 +14,7 @@
         </ul>
     </section>
 
-    <section class="widget">
+    <!-- <section class="widget">
         <h3 class="widget-title">分类</h3>
         <ul class="widget-list">
             {{ range $name, $taxonomy := .Site.Taxonomies.categories }}
@@ -23,16 +23,16 @@
             </li>
             {{ end }}
         </ul>
-    </section>
+    </section> -->
 
     <section class="widget">
-            <h3 class="widget-title">标签</h3>
-            <div class="tagcloud">
-                {{ range $name, $taxonomy := .Site.Taxonomies.tags }}
-                <a href="{{ "/tags/" | relLangURL }}{{ $name | urlize }}/">{{ $name }}</a>
-                {{ end }}
-            </div>
-        </section>
+        <h3 class="widget-title">标签</h3>
+        <div class="tagcloud">
+            {{ range $name, $taxonomy := .Site.Taxonomies.tags }}
+            <a href="{{ "/tags/" | relLangURL }}{{ $name | urlize }}/">{{ $name }}</a>
+            {{ end }}
+        </div>
+    </section>
 
     {{ with .Site.Params.links }}
     <section class="widget">
