--- a/layouts/_default/taxonomy.html
+++ b/layouts/_default/taxonomy.html
@@ -23,7 +23,7 @@
                     </h3>
                     {{ end }}
 
-                    {{ range $index,$data := (where .Paginator.Pages "Type" "post") }}
+                    {{ range $index,$data := (where .Paginator.Pages "Type" "posts") }}
                         <article class="post">
                             <header>
                                 <h1 class="post-title">
@@ -43,8 +43,8 @@
                             </div>
                             {{ end }}
                             <div class="post-content">
-                                {{ .Content | markdownify | truncate 180 }}
-                                <p class="readmore"><a href="{{ .Permalink }}">阅读全文</a></p>
+                                <!-- {{ .Content | markdownify | truncate 180 }} -->
+                                <!-- <p class="readmore"><a href="{{ .Permalink }}">阅读全文</a></p> -->
                             </div>
                         </article>
                     {{ end }}
