--- a/layouts/archives/single.html
+++ b/layouts/archives/single.html
@@ -6,10 +6,10 @@
 <div id="body">
     <div class="container">
         <div class="col-group">
-
             <div class="col-8" id="main">
+                <p>本博客共 {{len (where (where .Site.Pages "Type" "posts") "Kind" "page")}} 篇博文</p>
                 <div class="post-archive">
-                    {{ range (where (where .Site.Pages "Type" "post") "Kind" "page").GroupByDate "2006" }}
+                    {{ range (where (where .Site.Pages "Type" "posts") "Kind" "page").GroupByDate "2006" }}
                     <h2>{{ .Key }}</h2>
                     <ul class="listing">
                         {{ range .Pages }}
