--- a/layouts/index.html
+++ b/layouts/index.html
@@ -9,7 +9,7 @@
 
             <div class="col-8" id="main">
                 <div class="res-cons">
-                    {{ range $index,$data := (where .Paginator.Pages "Type" "post") }}
+                    {{ range $index, $data := (where .Paginator.Pages "Type" "posts") }}
                         <article class="post">
                             <header>
                                 <h1 class="post-title">
@@ -29,7 +29,7 @@
                             </div>
                             {{ end }}
                             <div class="post-content">
-                                {{ .Content | markdownify | truncate 180 }}
+                                {{ .Content | plainify | truncate 150 }}
                             </div>
                             <p class="readmore"><a href="{{ .Permalink }}">阅读全文</a></p>
                         </article>
