--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -2,7 +2,7 @@
     <div class="container">
         &copy; 2018 <a href="{{ .Site.BaseURL | absURL }}">{{ .Site.Title }}</a>.
         Powered by <a rel="nofollow noreferer noopener" href="https://gohugo.io">Hugo</a>.
-        Theme <a href="http://www.github.com/wlh320/simpale">simpale</a> based on <a href="https://github.com/rujews/maupassant-hugo">maupassant</a>.
+        <a href="http://www.github.com/wlh320/maupassant-hugo">Theme</a> forked from <a href="https://github.com/rujews/maupassant-hugo">maupassant</a>.
     </div>
 </footer>
 <a id="rocket" class="lb-doubleup" href="#top"></a>
