--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -7,13 +7,6 @@ $theme-color: #1793d0;
  * @version 1.3
  * @link http://pickcho.com
  */
-@font-face {
-  font-family: 'icomoon';
-  src: url('fonts/icomoon.woff?-i5ysuu') format('woff'),
-    url('fonts/icomoon.ttf?-i5ysuu') format('truetype');
-  font-weight: normal;
-  font-style: normal;
-}
 
 html,
 body {
@@ -126,15 +119,9 @@ textarea {
   clear: both;
 }
 
-.post-content a,
-.comment-content a {
-  border-bottom: 1px solid #666;
-}
-
 .post-meta a:hover,
 .post-content a:hover,
-.widget a:hover,
-.comment-content a {
+.widget a:hover {
   border-bottom-color: transparent;
 }
 
@@ -391,6 +378,10 @@ h1.post-title {
   padding-top: 20px;
 }
 
+.post-content a {
+  border-bottom: 1px solid #666;
+}
+
 .post-content h3,
 .post-content h2 {
   margin: 1.4em 0 1.1em;
@@ -437,6 +428,53 @@ h1.post-title {
   border: 1px solid #ccc;
   border-width: 1px 0 0 0;
   position: relative;
+}
+
+.post-content p code {
+  display: inline;
+  margin: 0 4px;
+  padding: 3px 4px;
+  border: 1px solid #ddd;
+}
+
+/* my own typography */
+
+.post-content {
+
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
+    color: $theme-color;
+  }
+
+  h1 {
+    font-size: 1.5em;
+    font-weight: 400;
+    margin-top: 1.2em;
+  }
+
+  h2 {
+    font-size: 1.3em;
+    font-weight: 350;
+    margin-top: 1.2em;
+  }
+
+  h3 {
+    font-size: 1.2em;
+    font-weight: 300;
+    margin-top: 1.2em;
+  }
+
+  h4,
+  h5,
+  h6 {
+    font-size: 1.1em;
+    font-weight: 300;
+    margin-top: 1.2em;
+  }
 }
 
 .archive-title {
@@ -926,48 +964,6 @@ screen and (max-width:500px) {
 .post-toc-title {
   color: $theme-color;
 }
-
-/* my own typography */
-
-.post-content {
-
-  h1,
-  h2,
-  h3,
-  h4,
-  h5,
-  h6 {
-    color: $theme-color;
-  }
-
-  h1 {
-    font-size: 1.5em;
-    font-weight: 400;
-    margin-top: 1.2em;
-  }
-
-  h2 {
-    font-size: 1.3em;
-    font-weight: 350;
-    margin-top: 1.2em;
-  }
-
-  h3 {
-    font-size: 1.2em;
-    font-weight: 300;
-    margin-top: 1.2em;
-  }
-
-  h4,
-  h5,
-  h6 {
-    font-size: 1.1em;
-    font-weight: 300;
-    margin-top: 1.2em;
-  }
-}
-
-
 
 /* back-to-top rocket （I change it to an arrow */
 @media print,
