fix toc smooth scroll

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -33,8 +33,12 @@ button.submit {
 }
 
 a:hover,
-a:active {
+a:active, a:focus {
   color: $theme-color;
+}
+
+:focus {
+  outline: none !important;
 }
 
 mark {
