--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -27,7 +27,7 @@
     <script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=TeX-MML-AM_CHTML' async></script>
     {{ end }}
     {{ if or .Params.toc (and .Site.Params.toc (ne .Params.toc false)) }}
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/tocbot/4.1.1/tocbot.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/tocbot/4.4.0/tocbot.min.js"></script>
     {{ $globalAutoCollapseToc := .Site.Params.autoCollapseToc | default false }}
     <script>
         tocbot.init({
@@ -38,7 +38,7 @@
             // Which headings to grab inside of the contentSelector element.
             headingSelector: 'h1, h2, h3',
             collapseDepth: {{ if not (or .Params.autoCollapseToc (and $globalAutoCollapseToc (ne .Params.autoCollapseToc false))) }} 6 {{else}} 0 {{ end }},
-            scrollSmooth: false,
+            scrollSmooth: true,
             positionFixedSelector: '.post-toc',
             fixedSidebarOffset: 'auto',
         });
